--- a/style/main.css
+++ b/style/main.css
@@ -20,7 +20,8 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background: rgba(0, 0, 0, 0.8) url(../images/sold-out.png) no-repeat center center;
+  background: rgba(0, 0, 0, 0.8) url(https://github.com/D-Sup/BendingmachineApp/blob/main/images/sold-out.png?raw=true)
+    no-repeat center center;
   border-radius: 10px;
 }
 .items > .name {
